strong styling improvement

--- a/src/template.html
+++ b/src/template.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <section id="charts">
-      <div id="circular"></div>
-      <div id="lollipop"></div>
-      <div id="pie"></div>
-      <div id="line"></div>
+      <div id="container"><div id="circular"></div></div>
+      <div id="container"><div id="lollipop"></div></div>
+      <div id="container"><div id="pie"></div></div>
+      <div id="container"><div id="line"></div></div>
     </section>
   </body>
 </html>
